<resources>
    <string name="app_name"> Access Computech </string>
    <string name="username">User Name</string>
    <string name="pass">Password</string>
    <string name="regPass">Enter Password(min 6 char)</string>
    <string name="login"> Login </string>
    <string name="register"> Register </string>
    <string name="fname"> First Name </string>
    <string name="lname"> Last Name </string>
    <string name="name"> Name </string>
    <string name="aadhar"> Aadhar Card No. </string>
    <string name="remark"> Remark </string>
    <string name="blocking_type"> Blocking Type </string>
    <string name="blk_remark"> Block Remark </string>

    <string name="driving"> Driving License No. </string>
    <string name="mark"> Identity Mark </string>
    <string name="height"> Height (in cms) </string>
    <string name="religion"> Religion </string>
    <string name="email">Email</string>
    <string name="worker_code">Worker Code</string>
    <string name="save">Save</string>
    <string name="contact">Contact Number</string>
    <string name="get_details">Get Details</string>
    <string name="log_out">Log Out</string>
    <string name="address">Local Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="pass1">Retype Password</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="dob1">Enter Date of Birth (DD/MM/YYYY)</string>
    <string name="data_inserted">Data Inserted Successfully</string>
    <string name="registration_success">Registration Successfull</string>
    <string name="email_in_use">Email Already in use</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="post">Post</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="blood">
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="qualification">

    </string-array>

    <string-array name="worker_type">

    </string-array>

    <string-array name="skill">

    </string-array>

    <string-array name="domicile">

    </string-array>

    <string-array name="nationality">

    </string-array>

    <string-array name="police">

        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="vehicle">

        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="blocked">

        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_image">User Image</string>
    <string name="profile_picture">Profile picture</string>
    <string name="home">Home</string>

</resources>